<resources>
    <string name="app_name">RFID Tools</string>
    <string name="help">Help</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="go2">goto</string>
    <string name="ok">OK</string>
    <string name="help_union_key">
        你可算是问到点子上了，联动密钥其实就是一个运行时被各种工具收集到的密钥，
        比如全加测试、半加测试、读写卡，而联动密钥最终又可以被上述的工具利用上，这就是联合动作!对了，
        对于保存的密钥文件,为了方便本程序提供了一个默认的名字，有需要请自行更改，否则会覆盖保存的喔！！!
    </string>
    <string name="mfoc">Mfoc</string>
    <string name="mfcuk">Mfcuk</string>
    <string name="hardnested">Hardnested</string>
    <string name="nfclist">Nfc-list</string>
    <string name="emulate">Emulate</string>
    <string name="readtag">Read</string>
    <string name="writetag">Write</string>
    <string name="aboutApp">About</string>
    <string name="appSettings">Settings</string>
    <string name="usage">Usage</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="joinGroup">JoinGroup</string>
    <string name="contactDev">ContactDev</string>
    <string name="sendLog">SendLog</string>
    <string name="clearData">ClearData</string>
    <string name="checkUpdate">CheckUpdate</string>
    <string name="logList">LogList</string>
    <string name="clear">Clear</string>
    <string name="tipls_clearData">You are currently applying to empty any data in the App "Nfc Tools" directory. The current operation is irreversible. You will lose all historical data. Is it empty?</string>
    <string name="cleaning">Cleanning.....</string>
    <string name="clearFinish">Clear finish, will auto restart.....</string>
    <string name="version">Version</string>
    <string name="device_connect_empty">Device not found , Dropdown refresh.....</string>
    <string name="menu_title_newDevice">New Devices</string>
    <string name="menu_title_allDevice">All Devices</string>
    <string name="common_tools">Common Tools</string>
    <string name="device_init_success">Device init success!</string>
    <string name="function_name_red_team">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Red Team&lt;/big&gt;&lt;/big&gt;&lt;big&gt; Terminal&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: RRG、PROXGRIND&lt;/p&gt;&lt;p&gt;&lt;small&gt;(HF, LF)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="function_name_rdv4rrg_reader">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Reader&lt;/big&gt;&lt;/big&gt;&lt;big&gt; UI&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: Read、Write&lt;/p&gt;&lt;p&gt;&lt;small&gt;(HF)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="function_name_scanner">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;&lt;big&gt;Scanner&lt;/big&gt;&lt;/big&gt;&lt;big&gt; Automatic&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Support: HF, LF&lt;/p&gt;&lt;p&gt;&lt;small&gt;(IC&lt;13.56MHZ&gt;, ID&lt;125KHZ or other &gt;)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="title_rdv4_function">Rdv4.0 Function</string>
    <string name="console_send">Send</string>
    <string name="console_clear_screen">Clear</string>
    <string name="console_stop_exe">Stop</string>
    <string name="console_gui">GUI</string>
    <string name="console_dynamic_btn">Easy Button</string>
    <string name="standard_output">Standard Output:</string>
    <string name="screen_scale">| Scale</string>
    <string name="tips_no_input"><![CDATA[Tips: “Standard output” Slide down & up available !]]></string>
    <string name="other_output">Other Outputs:</string>
    <string name="output_err">Output Error</string>
    <string name="output_log">Log</string>
    <string name="pm3_hint"><![CDATA[pm3 —>]]></string>
    <string name="command_input_hint"><![CDATA[Command Input <—]]></string>
    <string name="com_err_tips">Communication error, please check permission or voltage!</string>
    <string name="com_normal_tips">Communication normall</string>
    <string name="device_init_err">Device init error, please check your client version…</string>
    <string name="title_connecting">Connecting in progress!</string>
    <string name="title_connect_cancel">Cancel</string>
    <string name="cancel_tips">An unknown exception will occur when unlinking. You need to restart the program!</string>
    <string name="progress_msg">Currently you have a task running，please wait for task to finish!</string>
    <string name="tips_gui_not_support">Not yet supported or not required!</string>
    <string name="title_panel">Easy Button Panel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="tips_pm3_version">If version incorrect，It may cause disconnection or some exceptions during use.</string>
    <string name="command_input">Command Input</string>
    <string name="title_input">Title Input</string>
    <string name="button_edit">Button Edit</string>
    <string name="enter_delete">Are you sure you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_add">Button Add</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="dump_edit_save">Save</string>
    <string name="dump_edit_delete">Delete</string>
    <string name="Open">Open</string>
    <string name="rename">Rename</string>
    <string name="difference">Difference</string>
    <string name="dump_edit_key_extract">KeysExtract</string>
    <string name="dump_edit_data_shared">Shared</string>
    <string name="root">SdcardRoot</string>
    <string name="wechat">Wechat</string>
    <string name="Default">Default</string>
    <string name="res">Res:</string>
    <string name="pm3">PM3</string>
    <string name="title_select_dump_file">Please select dump file!</string>
    <string name="title_dump_save_mode">Please select save mode!</string>
    <string name="newFile">newFile</string>
    <string name="input_err">Input Error!</string>
    <string name="cover">Cover</string>
    <string name="title_dump_select_cover">Select the file to overwrite</string>
    <string name="title_dump_delete">Delete Dump File</string>
    <string name="delete_success">Delete success:</string>
    <string name="delete_failed">Delete failed:</string>
    <string name="cant_select_not_file">Can not select not file!</string>
    <string name="data_err">Data error!</string>
    <string name="data_name_dafault">Normal Data</string>
    <string name="title_shared_dump_file">Shared your dump</string>
    <string name="newName">New Name</string>
    <string name="illegal_filenames">Illegal filenames!</string>
    <string name="dump_parse_failed">Failure to parse data!</string>
    <string name="dump_4k_no_support">4K Tag not supported.</string>
    <string name="data_parse_err">Parse data package failed</string>
    <string name="data_fragmentary">Fragmentary data, can not show in view, must have 1k or 2k or 4k!</string>
    <string name="file_err">File exception.</string>
    <string name="format_no_support">Format not supported.</string>
    <string name="data_edit">Data Editor</string>
    <string name="key_editor">Keys Editor</string>
    <string name="data_diff">Data Diff</string>
    <string name="format_covert">Format Converter</string>
    <string name="union_keys">Union Keys</string>
    <string name="no_select">No select</string>
    <string name="diff_result">Result:</string>
    <string name="diff_result_no">No diff，no result can show......</string>
    <string name="block">block:</string>
    <string name="title_data_editor">DataEditor</string>
    <string name="key_file_select_state">No select</string>
    <string name="file_no_select_msg">The file is empty or no select，You can save to new file after input some key or open a file in menu.</string>
    <string name="title_keys_editor">Keys Editor</string>
    <string name="title_plz_input_name">Please input name!</string>
    <string name="input_check">Please check input!</string>
    <string name="file_create">Create file</string>
    <string name="content_repeat">Content Repeat</string>
    <string name="equal_info">:Info</string>
    <string name="title_file_select">Select File!</string>
    <string name="key_file_new_tips">No select，Do you need to create a new file and write to it?</string>
    <string name="unrepeat_no_line">No line repeat!</string>
    <string name="keys_show_failed">Keys show failed!</string>
    <string name="file_create_failed">File create failed!</string>
    <string name="data_block_diff_count">Diff block count:</string>
    <string name="data_char_diff_count">,Diff char count:</string>
    <string name="data_identical">The data are identical.</string>
    <string name="title_format_convert">Format Convert</string>
    <string name="tisp_select_convert_target">Please select convert target!</string>
    <string name="tisp_select_convert_save_path">Please select save path!</string>
    <string name="tips_convert_result_null">Convert result null!</string>
    <string name="tips_convert_save_path_null">Save path null!</string>
    <string name="tips_convert_save_name_null">Save name null!</string>
    <string name="format_convert_from_where">1、Select a file</string>
    <string name="QQ">QQ</string>
    <string name="app">APP</string>
    <string name="mct">MCT</string>
    <string name="format_convert_file_name_input">New file name.</string>
    <string name="format_convert_file_what_fromat">3、Execute convert</string>
    <string name="format_convert_to_where">2、Save location</string>
    <string name="format_bin">To bin format</string>
    <string name="format_txt">To txt format</string>
    <string name="format_between">The difference between them?</string>
    <string name="content_null">null</string>
    <string name="sector">Sector:</string>
    <string name="double_tap">Double times to exit!</string>
    <string name="slide_to_next_page">Slide to the next page</string>
    <string name="about_enjoy_msg">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Developer&lt;/big&gt;&lt;/p&gt;&lt;p&gt;Team: DXL、Olaf tan、Dennis Goh&lt;/p&gt;&lt;p&gt;&lt;small&gt;Enjoy yourself :)&lt;/small&gt;&lt;/p&gt;</string>
    <string name="go2_proxgrind_website">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Powered&lt;/big&gt;&lt;/p&gt;&lt;p&gt;By: ProxGrind&lt;/p&gt;&lt;p&gt;&lt;small&gt;Click go to web site&lt;/small&gt;&lt;/p&gt;</string>
    <string name="go2_rrg_website">&lt;p style=&quot;color:black;&quot;&gt;&lt;big&gt;Distributed&lt;/big&gt;&lt;/p&gt;&lt;p&gt;By: RFID Research Group (RRG)&lt;/p&gt;&lt;p&gt;&lt;small&gt;Click go to web site&lt;/small&gt;&lt;/p&gt;</string>
    <string name="nfc_not_turned_on">NFC not turned on</string>
    <string name="language">Language</string>
    <string name="following_system">Following System</string>
    <string name="chinese_simple">中文简体</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="msg_union_key_help">What is union keys?</string>
    <string name="hint_union_keys">This keys can be used in conjunction with other tools. It should be as short and effective as possible.</string>
    <string name="Load">Load</string>
    <string name="msg_app_permission_request">Program runtime needs some permissions, please give, otherwise there may be some problems that lead to software unavailability!</string>
    <string name="title_pm3_firmware_flasher">PM3 Firmware Flasher</string>
    <string name="tips_fw_client_version_same">1. Your FW can\'t than for client version too low or high , you need go flash FW.</string>
    <string name="tips_check_auto_go_termux">2. Check \'Auto Go\', it will auto go to terminal view.</string>
    <string name="auto_go">Auto Go</string>
    <string name="title_flash_firmware_otg">Flash Firmware(OTG)</string>
    <string name="title_go_termux">Go Termux</string>
</resources>