<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_act_format_convert"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/toolbarStyle"
        app:popupTheme="@style/popMenuStyle">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/txtSelectFormAnywhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/md_grey_100"
                android:text="@string/format_convert_from_where" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_200" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3">

                <Button
                    android:id="@+id/btnDumpSelectFromQQ"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/qq"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/QQ"
                    android:textAllCaps="false"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDumpSelectFromWecat"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/wechat"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/wechat"
                    android:textAllCaps="false"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDumpSelectFromThis"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/nfctools"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/app"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDumpSelectFromMCT"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/mct"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/mct"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDumpSelectFromSdcard"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/sdcard"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="Sdacrd"
                    android:textAllCaps="false"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDumpSelectFromMTools"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:drawableTop="@drawable/mtools"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="MTools"
                    android:textAllCaps="false"
                    app:layout_columnWeight="1" />

            </androidx.gridlayout.widget.GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/md_grey_200" />

            <TextView
                android:id="@+id/txtSaveToAnywhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/md_grey_100"
                android:text="@string/format_convert_to_where" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_200" />

            <include layout="@layout/file_select_init_list" />

            <EditText
                android:id="@+id/edtInputFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/format_convert_file_name_input" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/md_grey_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/format_convert_file_what_fromat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_200" />

            <Button
                android:id="@+id/btnConvert2Bin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/format_bin" />

            <Button
                android:id="@+id/btnConvert2Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/format_txt" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/md_grey_200" />

            <TextView
                android:id="@+id/txtShowFormatDiffences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_grey_100"
                android:gravity="right"
                android:padding="16dp"
                android:text="@string/format_between"
                android:textColor="#1E87E4" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>