<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.dxl.common.widget.StatusBarHeightView
        android:id="@+id/sbh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:layout_below="@id/sbh"
        android:src="@drawable/termux_view_example" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout1"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_fw_client_version_same"
            android:textColor="@color/colorTextNormal"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tips_check_auto_go_termux"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector_blue"
            android:padding="8dp"
            android:text="Client Update(Github)"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnFwFlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@drawable/btn_selector_blue"
            android:padding="8dp"
            android:text="@string/title_flash_firmware_otg"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000" />

        <Button
            android:id="@+id/btnGoToTermux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@drawable/btn_selector_blue"
            android:padding="8dp"
            android:text="@string/title_go_termux"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000" />

        <CheckBox
            android:id="@+id/ckBoxAutoGoTermux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_go" />

    </LinearLayout>

</RelativeLayout>