<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.dxl.common.widget.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:use_type="use_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/gradual"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_grey_200"
                android:padding="10dp"
                android:text="@string/language"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_200" />

            <RadioGroup
                android:id="@+id/rdoGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <RadioButton
                    android:id="@+id/rdoBtnLanguageAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:text="@string/following_system" />

                <RadioButton
                    android:id="@+id/rdoBtnLanguageChineseSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:text="@string/chinese_simple" />

                <RadioButton
                    android:id="@+id/rdoBtnLanguageEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:text="@string/english" />

            </RadioGroup>


        </LinearLayout>


    </cn.dxl.common.widget.StatusBarHeightView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="Power by Proxgrind\nDistributed by RFID Research Group (RRG)"
        android:textSize="12sp" />

</RelativeLayout>